--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 .container {
   width: 400px;
-  margin: 16px auto 0;
+  margin: 16px auto;
 }
 
 h1 {
@@ -34,6 +34,14 @@ li {
 li input:checked + span {
   color: #aaa;
   text-decoration: line-through;
+}
+
+li input {
+  margin-right: 8px;
+}
+
+li label {
+  margin-right: 8px;
 }
 
 form {
